test/src/e2e_vm_tests/test_programs/should_pass/trait_map_use_indirect_impl/src/main.sw
contract;

mod foobar;

use foobar::StorageFoobar;

storage {
    foo: StorageFoobar = StorageFoobar {},
}

impl Contract {
    fn foobar() {
        storage.foo.foobar();
    }
}