test/src/e2e_vm_tests/test_programs/should_fail/no_self_in_abi_method_signature/src/main.sw
contract;

abi MyContract {
    fn foo(self);
}

